<resources>
    <string name="app_name">Houla</string>
    <string name="play">Jouer</string>
    <string name="option">Options</string>
    <string name="reveil">reveil</string>
    <string name="regle_reveil">Dans ce jeu, tu vas devoir appuyer 8 fois sur ton réveil pour le faire taire. Attention, il risque de se déplacer ! ....</string>
    <string name="regle_pote">Dans ce jeu, tu vas devoir réveiller ton pote, secoue-le !</string>
    <string name="regle_vivant">Dans ce jeu, vérifie si ton pote est vivant, tu devrais écouter si son coeur bat encore ...</string>
    <string name="redac_titre">Rédige ta rédac !</string>
    <string name="Score">Votre score :</string>
    <string name="accueil_description_image_fond">Image de fond</string>
    <string name="options_descrpition_image_fond">Image de fond</string>
    <string name="pote_titre">Réveille ton pote</string>
    <string name="couette_titre">Remonte ta couette</string>
    <string name="vivant_titre">Vivant or not vivant ?</string>
    <string name="reveil_titre">Eteins ton réveil</string>
    <string name="cash_titre">Balance du cash !</string>
    <string name="heure_titre">Arrive à l\'heure</string>
    <string name="retour">Retour</string>
    <string name="score_description_fond">Image de fond</string>
    <string name="cash_image_description">Image jeu</string>
    <string name="cash_image_victoire">Image fond victoire</string>
    <string name="cash_image_defaite">Image défaite</string>
    <string name="cash_gagne">Gagné !</string>
    <string name="cash_message_gagne">Bravo, tu as réussi à éteindre 7 fois ton réveil ! Tu peux aller en cours en toute tranquilité !</string>
    <string name="cash_suite">La suite please !</string>
    <string name="cash_texte_go">Go !</string>
    <string name="cash_description_image_accueil">Image accueil</string>
    <string name="pote_compteur_depart">10:0</string>
    <string name="pote_image_mec_endormi">Mec endormi</string>
    <string name="pote_image_victoire">Image victoire</string>
    <string name="pote_image_defaite">Image défaite</string>
    <string name="pote_titre_victoire">Gagné !</string>
    <string name="pote_message_victoire">Bravo, tu as réussi à réveiller ton pote, resserre-lui donc un autre verre !</string>
    <string name="pote_texte_suite">La suite please !</string>
    <string name="pote_go">Go !</string>
    <string name="vivant_compteur_depart">10:0</string>
    <string name="vivant_image_mec_mort">Mec mort</string>
    <string name="vivant_image_victoire">Image victoire</string>
    <string name="vivant_image_defaite">Image défaite</string>
    <string name="vivant_titre_victoire">Gagné !</string>
    <string name="vivant_message_victoire">Bravo, ton pote est encore vivant, tu pourras dormir sereinement !</string>
    <string name="vivant_texte_suite">La suite please !</string>
    <string name="vivant_go">Go !</string>
    <string name="redac_description_image_accueil">Image fond accueil</string>
    <string name="redac_texte_compteur">10:0</string>
    <string name="redac_image_victoire">Image victoire</string>
    <string name="redac_description_defaite">Image défaite</string>
    <string name="redac_texte_victoire">Gagné !</string>
    <string name="redac_message_victoire">Bravo, tu as réussi à écrire ta rédaction dans les temps !</string>
    <string name="redac_texte_suite">La suite please !</string>
    <string name="redac_texte_go">Go !</string>
    <string name="reveil_description_image_jeu">Image partie en cours</string>
    <string name="reveil_texte_compteur">10:0</string>
    <string name="reveil_texte_fin_jeu">0</string>
    <string name="reveil_desciption_image_victoire">Image victoire</string>
    <string name="reveil_description_image_defaite">Image défaite</string>
    <string name="reveil_texte_victoire">Gagné !</string>
    <string name="reveil_message_victoire">Bravo, tu as réussi à éteindre 7 fois ton réveil ! Tu peux aller en cours en toute tranquilité !</string>
    <string name="reveil_message_suite">La suite please !</string>
    <string name="reveil_description_image_accueil">Image accueil</string>
    <string name="reveil_texte_go">Go !</string>
    <string name="redac_texte_compteur_fin">00:0</string>
    <string name="reveil_message_victoire_1">Bravo, tu as écrit</string>
    <string name="redac_message_victoire_2">caractères ! Tu mérite de continuer tes études !</string>
    <string name="redac_message_defaite_1">Zut, tu n\'as réussi à écrire que</string>
    <string name="redac_message_defaite_2">caractères, dommage, tu n\'auras pas ton semestre !</string>
    <string name="redac_texte_defaite">Perdu…</string>
    <string name="reveil_texte_compteur_depart">00:0</string>
    <string name="redac_message_victoire_1">Bravo, tu as réussi à éteindre</string>
    <string name="reveil_message_victoire_2">fois ton réveil ! Tu peux aller en cours en toute tranquilité !</string>
    <string name="reveil_message_defaite">Perdu…</string>
    <string name="reveil_message_defaite_1">Zut, tu n\'as réussi à éteindre ton réveil que</string>
    <string name="reveil_message_defaite_2">fois, bon allez, on continue…</string>
    <string name="cash_message_fin">Comment dire… Finalement tu n\'as peut-être pas autant de cash sur toi que ce que tu pensais, aller, pour te consoler tu peux passer à l\'étape suivante !</string>
    <string name="cash_titre_fin">Euh… C\'est la dèche</string>
    <string name="score_texte_final1">Ton score est de</string>
    <string name="score_texte_final2">points</string>
    <string name="biere_titre">Bière Pong !</string>
    <string name="biere_victoire">Bravo, ton pote as bu </string>
    <string name="biere_victoire_2"> verres grâce a toi ! La soirée commence bien !</string>
    <string name="biere_defaite">Bon… ce n\'est pas ton pote qui risque d\'être bourré ce soir ! </string>

</resources>
