<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="uqac.dim.houla.menu_options.OptionActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageFond2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:contentDescription="@string/options_descrpition_image_fond"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageFondoptions"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="false"
            android:cropToPadding="false"
            android:contentDescription="@string/options_descrpition_image_fond"
            android:scaleType="centerCrop"
            android:visibility="visible" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/pote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="choisirJeu"
                android:text="@string/pote_titre" />

            <Button
                android:id="@+id/redac"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="choisirJeu"
                android:text="@string/redac_titre" />

            <Button
                android:id="@+id/couette"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="choisirJeu"
                android:text="@string/couette_titre" />

            <Button
                android:id="@+id/bourre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="choisirJeu"
                android:text="@string/bourre_titre" />

            <Button
                android:id="@+id/reveil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="choisirJeu"
                android:text="@string/reveil_titre" />

            <Button
                android:id="@+id/cash"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="choisirJeu"
                android:text="@string/cash_titre" />

            <Button
                android:id="@+id/course"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="choisirJeu"
                android:text="@string/heure_titre" />

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/retour"
                tools:layout_editor_absoluteX="40dp"
                tools:layout_editor_absoluteY="150dp" />
        </LinearLayout>

    </android.support.constraint.ConstraintLayout>


</LinearLayout>
