<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageFond"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:contentDescription="@string/redac_description_image_accueil"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/layoutGeneral"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone"
        android:weightSum="100">


        <ProgressBar
            android:id="@+id/progressionJeu"
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:background="@color/blanc"
            android:indeterminate="false"
            android:max="100"
            android:maxHeight="20sp"
            android:minHeight="20sp"
            android:progress="100"
            android:progressBackgroundTint="@color/blanc"
            android:progressTint="@color/bleu_sombre" />


        <TextView
            android:id="@+id/timer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:text="@string/redac_texte_compteur"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="50sp" />

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="75">

            <TextView
                android:id="@+id/zoneDeTexte"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="60sp"
                android:paddingRight="60sp"
                android:paddingTop="20sp"
                android:text=""
                android:textColor="@android:color/black"
                android:textSize="24sp" />

        </android.support.constraint.ConstraintLayout>

        <Button
            android:id="@+id/boutonRedac"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100sp"
            android:layout_marginRight="100sp"
            android:layout_weight="5"
            android:onClick="clicClavier"
            android:textAllCaps="false"
            android:textSize="24sp"
            tools:layout_editor_absoluteY="502dp" />

    </LinearLayout>

    <ImageView
        android:id="@+id/imageConfettis"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alpha="0"
        android:contentDescription="@string/redac_image_victoire"
        android:scaleType="centerCrop" />

    <ImageView
        android:id="@+id/imageTriste"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alpha="0"
        android:contentDescription="@string/redac_description_defaite"
        android:scaleType="centerCrop" />

    <LinearLayout
        android:id="@+id/layoutFin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/texteFin1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="200sp"
            android:text="@string/redac_texte_victoire"
            android:textAlignment="center"
            android:textColor="@android:color/holo_green_dark"
            android:textSize="50sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/texteFin2"
            android:layout_width="300sp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50sp"
            android:backgroundTint="@android:color/background_light"
            android:text="@string/redac_message_victoire"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <Button
            android:id="@+id/boutonSuivant"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="100dp"
            android:layout_marginRight="100dp"
            android:layout_marginTop="50dp"
            android:backgroundTint="@color/bleu_sombre"
            android:onClick="boutonSuivant"
            android:text="@string/redac_texte_suite"
            android:textColor="@color/blanc"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="50dp"
            tools:layout_editor_absoluteY="652dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutRegles"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/buttonGo"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="100dp"
            android:layout_marginRight="100dp"
            android:layout_marginTop="240dp"
            android:backgroundTint="@color/bleu_sombre"
            android:onClick="launchGame"
            android:text="@string/redac_texte_go"
            android:textColor="@color/blanc"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="50dp"
            tools:layout_editor_absoluteY="652dp" />

    </LinearLayout>


</android.support.constraint.ConstraintLayout>