<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/layoutGeneral"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5">

            <Button
                android:id="@+id/boutonCash"
                android:onClick="launchVideo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </android.support.constraint.ConstraintLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/imageConfettis"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/cash_image_victoire"
        android:alpha="0"
        android:scaleType="centerCrop" />

    <VideoView
        android:id="@+id/videoView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <ImageView
        android:id="@+id/imageTriste"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alpha="0"
        android:contentDescription="@string/cash_image_defaite"
        android:scaleType="centerCrop" />

    <LinearLayout
        android:id="@+id/layoutFin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/texteFin1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="200sp"
            android:text="@string/cash_titre_fin"
            android:textAlignment="center"
            android:textColor="@android:color/holo_green_dark"
            android:textSize="50sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/texteFin2"
            android:layout_width="300sp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40sp"
            android:backgroundTint="@android:color/background_light"
            android:text="@string/cash_message_fin"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <Button
            android:id="@+id/boutonSuivant"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="100dp"
            android:layout_marginRight="100dp"
            android:layout_marginTop="50dp"
            android:backgroundTint="@color/bleu_sombre"
            android:onClick="boutonSuivant"
            android:text="@string/cash_suite"
            android:textColor="@color/blanc"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="50dp"
            tools:layout_editor_absoluteY="652dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutRegles"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="visible">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageAccueil"
                android:layout_width="match_parent"
                android:contentDescription="@string/cash_description_image_accueil"
                android:layout_height="match_parent"
                android:scaleType="centerCrop" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:weightSum="10">

                <Button
                    android:id="@+id/buttonGo"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginLeft="100dp"
                    android:layout_marginRight="100dp"
                    android:layout_marginTop="240dp"
                    android:backgroundTint="@color/bleu_sombre"
                    android:onClick="launchGame"
                    android:text="@string/cash_texte_go"
                    android:textColor="@color/blanc"
                    android:textSize="20sp"
                    tools:layout_editor_absoluteX="50dp"
                    tools:layout_editor_absoluteY="652dp" />
            </LinearLayout>

        </android.support.constraint.ConstraintLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>