<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_vertical"
    tools:context="uqac.dim.houla.MainActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageAccueil"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/accueil_description_image_fond"
            android:scaleType="centerCrop" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:layout_width="180dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/bleu_sombre"
                android:onClick="launchGame"
                android:text="@string/play"
                android:textColor="@color/blanc"
                android:textSize="20sp"
                android:textStyle="normal|bold" />

            <Button
                android:layout_width="180dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/bleu_sombre"
                android:onClick="launchOption"
                android:text="@string/option"
                android:textColor="@color/blanc"
                android:textSize="18sp" />
        </LinearLayout>
    </android.support.constraint.ConstraintLayout>


</LinearLayout>
